--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -1,3 +1,21 @@
 #app{
     font-family: 'Roboto';
 }
+footer{
+    padding: 5%;
+}
+.heading{
+    padding-top: 5%;
+    text-align: center;
+}
+
+.video_wrapper{
+    width: 100%;
+    height: 100%;
+    padding: 5% 0% 5% 5%;
+    
+}
+video{
+    width: 100%;
+    height: 100%;
+}
